--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
