--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "classnames": "^2.5.1",
     "firebase": "^10.12.3",
+    "framer-motion": "^11.3.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
