--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "classnames": "^2.5.1",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.3",
     "framer-motion": "^11.3.8",
     "react": "^18.3.1",
