--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.4.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
